<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="230dp"
        android:layout_height="270dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_rc"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_height="130dp"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/product_name_rc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_rc"
                android:layout_marginTop="12dp"
                android:textSize="22sp"
                android:layout_marginBottom="9dp"
                android:text="@string/product_name"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/quantity_rc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/product_name_rc"
                android:layout_marginTop="7dp"
                android:layout_marginStart="15dp"
                android:textSize="20sp"
                android:text="@string/quantity"
                />

            <TextView
                android:id="@+id/price_rc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/product_name_rc"
                android:layout_marginTop="7dp"
                android:layout_marginStart="70dp"
                android:textSize="20sp"
                android:layout_toEndOf="@id/quantity_rc"
                android:text="@string/price"
                />

            <Button
                android:id="@+id/rc_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/buy"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                />


        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>