<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PhoneFragment"
    android:gravity="center">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="360dp"
        android:layout_height="280dp"
        app:cardElevation="30dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="40dp"
                android:hint="@string/admin"
                android:drawableStart="@drawable/admin_panel"
                android:drawablePadding="20dp"
                />

            <EditText
                android:id="@+id/admin_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/admin"
                android:hint="@string/admin_code"
                android:drawableStart="@drawable/lock_person"
                android:drawablePadding="20dp"
                />


            <Button
                android:id="@+id/admin_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/admin_code"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/log_in"
                android:textSize="20sp"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:backgroundTint="@color/blueAccent"
                />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>



</LinearLayout>