<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionActivity">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/new_price"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="31dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/edit_text_border_style"
                android:ems="10"
                android:hint="@string/new_price"
                android:inputType="text"
                android:paddingStart="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/new_quantity"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_border_style"
                android:ems="10"
                android:hint="@string/new_quantity"
                android:inputType="text"
                android:paddingStart="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/new_price"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/greenAccent"
                android:text="@string/update"
                android:layout_marginStart="10dp"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/new_quantity"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView3"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:layout_marginTop="80dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.16000003">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/to_delete_product"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="31dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/edit_text_border_style"
                android:ems="10"
                android:hint="@string/product_name"
                android:inputType="text"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete_btn"
                app:layout_constraintHorizontal_bias="0.253"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/delete_btn"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="56dp"
                android:backgroundTint="@color/greenAccent"
                android:text="@string/delete"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update2"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete2"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"/>


</androidx.constraintlayout.widget.ConstraintLayout>