<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoard">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="380dp"
        android:layout_height="500dp"
        app:cardCornerRadius="30dp"

        app:cardElevation="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/add_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/uploadimg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_image"
                app:layout_constraintVertical_bias="0.07999998">


                <EditText
                    android:id="@+id/add_quantity"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_border_style"
                    android:ems="10"
                    android:hint="@string/quantity"
                    android:inputType="number"
                    android:paddingStart="10dp" />


                <EditText
                    android:id="@+id/add_price"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_border_style"
                    android:ems="9"
                    android:hint="@string/price"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>


            <EditText
                android:id="@+id/add_product_name"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_border_style"
                android:hint="@string/product_name"
                android:inputType="text"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.37"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.076" />

            <Button
                android:id="@+id/add_product"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blueAccent"
                android:text="@string/add"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_product_name"
                app:layout_constraintVertical_bias="0.325" />

            <ImageView
                android:id="@+id/setting_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:src="@drawable/settings"
                app:layout_constraintBottom_toBottomOf="@+id/add_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dash_boar"
        android:textColor="@color/greenAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:text="@string/remember"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />


</androidx.constraintlayout.widget.ConstraintLayout>